--- a/src/Style.css
+++ b/src/Style.css
@@ -41,6 +41,58 @@ nav .links{
 
 nav .links a{
     text-decoration: none;
-    color: cadetblue;
+    color:aqua;
     font-weight: 700;
+}
+
+.Section_1{
+    margin-top: 40px;
+    width: 100%;
+    height: auto;
+}
+
+.Section_1 .par{
+    text-align: center;
+    color: violet;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.products_box{
+    margin-top: 30px;
+    width: 100%;
+    padding: 0 50px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.mini_box{
+    padding: 20px;
+    width: 300px;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    border: 1px solid violet;
+}
+
+.mini_box img{
+    width: 150px;
+    height: 200px;
+}
+
+.mini_box .count{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 50px;
+}
+
+.mini_box .count button{
+    width: 40px;
 }
